# DnD_Companion

./: .gitignore  README.md
CSS/: 404Error.css  general.css
HTML/: 404Error.html  index.html
WebServer/: CMakeLists.txt
WebServer/src/HTTP/: HTTPMessage.cpp  HTTPMessage.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPUtils.cpp  HTTPUtils.h
WebServer/src/Resources/: URI.cpp  URI.h
